# multi_agent_research_automation

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
api/: main.py
api/models/: requests.py  responses.py
api/routers/: documents.py  memory.py  research.py
data/vector_store/: chroma.sqlite3
data/vector_store/1a98839f-3d96-429c-8d58-a207b3c5e468/: index_metadata.pickle
src/agent/: analysis_agent.py  generation_agent.py  memory_agent.py  orchestrator.py  rag_agent.py  search_agent.py  tool_agent.py
src/config/: config.yaml  config_loader.py  vector_config.yaml
src/prompt_library/: analysis_prompt.txt  generation_prompt.txt  memory_agent_prompt.txt  rag_prompt.txt  report_prompt.txt  search_prompt.txt  tool_agent_prompt.txt
src/rag/: document_processor.py  vector_store.py
src/tools/: arxiv_tool.py  groq_llm.py  tavily_tool.py  wikipedia_tool.py
src/utils/: logger.py  prompt_loader.py
src/workflow/: research_flow.py
tests/: tests_rag.py
tests/api/: test_research.py
