[project]
name = "multi-agent-research-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = ["agent", "config", "workflow", "prompt_library", "tools", "utils","notebook"]
package-dir = {"" = "src"}
